--- a/src/componentsEng/Header.css
+++ b/src/componentsEng/Header.css
@@ -21,7 +21,7 @@
     align-items: center;
     width: 100%;
 }
-.logo-container a {
+.title {
     text-decoration: none;
     font-size: 1.5rem;
     font-family: 'Brush Script MT';
