--- a/src/componentsEng/Header.css
+++ b/src/componentsEng/Header.css
@@ -22,6 +22,7 @@
     width: 100%;
 }
 .title {
+    padding-left: 1rem;
     text-decoration: none;
     font-size: 1.5rem;
     font-family: 'Brush Script MT';
