--- a/src/componentsEng/Header.css
+++ b/src/componentsEng/Header.css
@@ -13,6 +13,10 @@
 .headerfont{
     font-family: 'Courier';
     color: whitesmoke;
+    justify-content: space-between;
+    text-align: center;
+    justify-content: center;
+    padding-top: 10px;
 }
 .header-con {
     display: flex;
@@ -25,8 +29,8 @@
     padding-left: 1rem;
     text-decoration: none;
     font-size: 1.5rem;
-    font-family: 'Brush Script MT';
-    color: whitesmoke;
+    font-family: 'Courier';
+    color: rgb(255, 218, 172)
 }  
 .changEng{
     color: rgb(255, 218, 172)!important;
@@ -37,7 +41,6 @@
   .th{
     width: 20px ;
     line-height: 1.22;
-    vertical-align:bottom;
   }
 ul {
     list-style-type: none;
@@ -73,9 +76,8 @@ ul {
     display: none;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 770px) {
     .mobile-menu {
-        background-color: #333;
         position: fixed;
         display: block;
         color: white;
